Update Contact Me

--- a/public/index.html
+++ b/public/index.html
@@ -146,10 +146,8 @@
     
         <div id="contact" class="container">
             <h1>Contact Me</h1>
-            <div>School Email: cory.burda@stonybrook.edu</div>
-            <div>Personal Email: coryburda@gmail.com</div>
-            <div>Linkedin: https://www.linkedin.com/in/cory-burda/</div>
-            <div>Phone Number: 718-902-1746</div>
+            <div><a href="mailto:coryburda@gmail.com">Email me</a></div>
+            <div><a href="https://www.linkedin.com/in/cory-burda/">My Linkedin Profile</a></div>
         </div>
     
         <footer id="main-footer">
